# distal

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  container.def  diagnose_gpu.sh  mise.toml  pixi.toml  pyproject.toml  sky.yaml  vast.sh
.pixi/: config.toml
configs/: advantage.yaml  advantage_train.yaml  eval.yaml  record.yaml  rollout.yaml  sky-ssh.yaml  sky.yaml  slurm.yaml  sweep.yaml  sweep_value.yaml  train.yaml  value.yaml
distal/: advantage_cache.py  advantages.py  auroc.py  can_activate.py  check_advantage_conditioning.py  collect.py  collect_libero_plus.py  compare_ood.py  compute_advantage_labels.py  compute_maha_stats.py  embedding.py  eval_guidance.py  eval_libero_plus.py  eval_variance.py  maha_auroc.py  maha_reward.py  push_to_hub.py  rollout_value_viz.py  sae.py  sim_eval.py  train_pi_star.py  train_sae.py  train_value.py  trim_wandb_run.py  value_model.py  variant_names.py
lerobot_policy_advantage/: pyproject.toml
lerobot_policy_advantage/lerobot_policy_advantage/: __init__.py  configuration_advantage.py  modeling_advantage.py  processor_advantage.py
lerobot_policy_pistar06/: pyproject.toml
lerobot_robot_piper/: pyproject.toml
lerobot_robot_piper/lerobot_robot_piper/: config_piper.py  piper.py
lerobot_teleoperator_piper/: pyproject.toml
lerobot_teleoperator_piper/lerobot_teleoperator_piper/: config_piper_teleoperator.py  piper_teleoperator.py
piper_arm/: collect.py  compute_advantage_labels.py  embedding.py  eval_dist.py  eval_mahalanobis.py  eval_trace.py  mahalanobis.py  rollout.py  rollout_value_viz.py  (+5 more)
(+31 files in other folders)
