[project]
name = "lerobot_policy_advantage"
version = "0.1.0"
description = "Advantage-conditioned policy plugin for LeRobot"
requires-python = ">=3.10,<3.11"
dependencies = [
  "lerobot[smolvla] @ git+https://github.com/huggingface/lerobot.git",
  "piper-arm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
