[project]
name = "lerobot_teleoperator_piper"
version = "0.1.0"
description = "Piper teleoperator plugin for LeRobot"
requires-python = ">=3.12,<3.13"
dependencies = ["lerobot", "distal"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
